--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ remote_theme: pages-themes/merlot@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
-title: [The title of your site]
-description: [A short description of your site's purpose]
-
+title: RisingTides: Sink or Swim
+description: A choose your own adventure novel.
+url: "https://dorsadanesh.github.io/RisingTides-Sink-or-Swim/index.html" 
